--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <img src="./assets/logo-ALTA.png" alt="">
                 </div>
                 <ul class="navigation">
-                    <li><a>home</a></li>
-                    <li><a href="/about.html" target="_blank">about</a></li>
+                    <li><a href="/index.html">home</a></li>
+                    <li><a href="/about.html">about</a></li>
                     <li><a href="/experience.html" target="_blank">experience</a></li>
                     <li><a href="/contact.html" target="_blank">contact</a></li>
                 </ul>
