--- a/about.html
+++ b/about.html
@@ -17,30 +17,65 @@
                     <img src="../assets/logo-ALTA.png" alt="">
                 </div>
                 <ul class="navigation">
-                    <li><a href="">home</a></li>
-                    <li><a href="">about</a></li>
-                    <li><a href="">experience</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="/index.html">home</a></li>
+                    <li><a href="/about.html">about</a></li>
+                    <li><a href="/experience.html" target="_blank">experience</a></li>
+                    <li><a href="/contact.html" target="_blank">contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="aboutWrapper">
             <h1>ABOUT ME.</h1>
         </div>
-        <div class="content-contain">
+        <div class="wrapper-about">
             <div class="about-exp">
                 <p>Versatile Front-end Developer with 3+ years of experience designing, developing, and managing complex e-commerce sites and internal frameworks. Specializes in AngularJS and responsive design.</p>
                 <p><img class="hero-image"src="../assets/matthew-hamilton-tNCH0sKSZbA-unsplash.jpg" alt=""></p>
             </div>
+            <ul class="ul-style">
+                <li><a class="ex-style">2014</a></li>
+                <li class="ex-de"><a class="ex-style">DIPLOMA</a></li>
+                <li class="ex-de"><a>Computer Engineering-University of chichago</a></li><br><br>
+                <li><a class="ex-style">2018</a></li>
+                <li class="ex-de"><a class="ex-style">BACHELOR DEGREE</a></li>
+                <li class="ex-de"><a>BS Computer Engineering - University of Chicago</a></li>
+            </ul>
+            <div class="pp-style">
+           
+                <h3>Here’s few technologies I’ve been working with recently :</h3>
+         
+            <table>
+                    <tr>
+                        <td>Player</td>
+                        <td>Region</td>
+                        <td>Role</td>
+                    </tr>
+                    <tr>
+                        <td>Miracle</td>
+                        <td>Jordan</td>
+                        <td>Carry super</td>
+                    </tr>
+                    <tr>
+                        <td>Zai</td>
+                        <td>icelnad</td>
+                        <td>Offlane omeegalul</td>
+                    </tr>
+                    <tr>
+                        <td>Matumbaman</td>
+                        <td>Findlandia</td>
+                        <td>Carry</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div class="edu-contain">
-            <div class="edu-exp">
-                <p>Education</p>
-                <div>
-                    <ul type="disc">
-                        <li>2014</li>
-                    </ul>
-                </div>
+        <div>
+            <div class="container">
+                <nav class="wrapper">
+                    <div class="logo">
+                        <img src="../assets/logo-ALTA.png" alt="">
+                    </div>
+                    <p>Social Media</p>
+                </nav>
             </div>
         </div>
     </body>
