penambahan tag form

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,32 @@
     <title>contact</title>
 </head>
 <body>
-    <h1>ini page kontak</h1>
+    <h1>CONTACT US</h1>
+    <div>
+        <header>
+            <h1>Header dari form</h1>
+            <p>Mari kita coba form</p>
+        </header>
+        </div>
+        <div>
+            <form action="">
+                <label for="">Full Name</label><br><br>
+                <input type="text" name="fullName"><br><br>
+                <label for="">Email Address</label><br><br>
+                <input type="email" name="emailAddress"><br><br>
+                <label for="">Phone Number</label><br><br>
+                <input type="number" name="phoneNumber"><br><br>
+
+                <input type="radio" name="role" value="Front-end">
+                <label for="Front-end">Front-end</label><br>
+                <input type="radio"  name="role" value="Back-end">
+                <label for="Back-end">Back-end</label><br>
+                <input type="radio"  name="role" value="Quality asurance">
+                <label for="Quality asurance">Quality asurance</label><br><br>
+
+                <label for="">Message</label><br><br>
+                <input  type="text" name="fname"><br>
+            </form>
+        </div>
 </body>
 </html>
