Penambahan ul li pada experience kemudian nanti akan di bungkus oleh card

--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,13 @@
     <title>experience</title>
 </head>
 <body>
-    <p>ini page experience</p>
+    <h1>EXPERIENCE</h1>
+    <div>
+        <ul>
+            <li><a href="">sadasdasd</a></li>
+            <li><a href="">dasdsadas</a></li>
+            <li><a href="">dsdasda</a></li>
+        </ul>
+    </div>
 </body>
 </html>
